# turtlebot_competition

./: CMakeLists.txt  CMakeLists.txt~  CommandQueue.cpp  CommandQueue.h  JointController.cpp  JointController.h  README.md  SonarSensor.cpp  SonarSensor.h  coconuts_arduino.ino  joint pos  package.xml  plugin_description.xml
action/: ConfigStereoCamera.action  MotorControl.action
coconuts_arduino/: JointController.h  SonarSensor.cpp  SonarSensor.h
coconuts_common/msg/: ArmMovement.msg  SensorReading.msg  SensorStatus.msg
coconuts_master/launch/: detect_ball_forward_tuning.launch  master.launch  run_derby.launch  usb_cam.launch
coconuts_master/src/: centroidKeyboard.cpp  detect_ball_down_tuning.cpp  detect_bucket_forward_tuning.cpp  publish_transforms.cpp  snes_joy_node.cpp  teleop_config_server_example.cpp
coconuts_odroid/include/: interface.h
coconuts_odroid/launch/: .run_derby.launch.swp  detect_ball_stereo.launch  motion.launch  test.launch
coconuts_odroid/launch/includes/: hexagons.urdf.xacro
coconuts_odroid/src/: arm_control.cpp  camera_down_calibration.yaml  detect_ball_down_orange.cpp  explorer.cpp  getDistance.cpp  globalLocalization.cpp  globalLocalizationPY.py  goto.cpp  locate_ball_down.cpp  locate_ball_forward.cpp  locate_ball_stereo.cpp  mother_brain.cpp
coconuts_rviz_plugins/: package.xml
coconuts_rviz_plugins/src/: imu_display.cpp  teleop_panel.cpp
include/: states.h
launch/: .brain.launch.swp  .bridge.launch.swp  brain.launch  bridge.launch  detect_ball.launch  detect_ball.launch~  detect_ball_down.launch  detect_ball_down_tuning.launch  detect_ball_forward.launch  detect_ball_forward_tuning.launch  detect_ball_minimal.launch  detect_ball_tuning.launch  detect_bucket_forward.launch  detect_bucket_forward_tuning.launch  localization.launch  master.launch  mock.launch  motion.launch  odroid-split-bridge.launch  odroid.launch  odroid.launch.save  odroid.launch~  run_derby.launch  turtlebot_minimal.launch  usb_cam.launch  working_demo.launch
launch/includes/: description.launch.xml  kobuki.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  robot.launch.xml  turtlebot_library.urdf.xacro
msg/: ArmMovement.msg  ArmStatus.msg  ControlState.msg  MotorPosition.msg
rviz/: robot.rviz
scripts/: controller.py  teleop_config.py  teleop_config_server_test.py
src/: .SimpleMover.cpp.swp  .mother_brain.cpp.swp  Bridge.cpp  MockArduino.cpp  SimpleInterface.cpp  SimpleMover.cpp  SimpleMover.cpp~  arm_poll.cpp  arm_pub_test.cpp  ball_marker.cpp  calibration.yaml  camera_up_calibration.yaml  centroidKeyboard.cpp  detect_ball.cpp  detect_ball.cpp~  detect_ball_down.cpp  detect_ball_down_green.cpp  detect_ball_down_orange.cpp  detect_ball_down_tuning.cpp  detect_ball_forward.cpp  detect_ball_forward_tuning.cpp  detect_ball_left.cpp  detect_ball_right.cpp  detect_ball_tuning.cpp  detect_bucket_forward.cpp  detect_bucket_forward_tuning.cpp  detect_objects_forward.cpp  detect_objects_forward_tuning.cpp  detect_obstacle.cpp  drive_widget.cpp  drive_widget.h  explorer.cpp  fineControl.cpp  flag.h  getDistance.cpp  getDistance.cpp~  globalLocalization  globalLocalizationPY.py  goto.cpp  imu_display.h  (+24 more)
